--- a/games/static/games/css/styles.css
+++ b/games/static/games/css/styles.css
@@ -1,7 +1,13 @@
 /* Change the background color of the webpage */
+
 body {
-    background-color: #f7faff;
+  background: url("../img/bg-alt.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
 
 /* remove the bullet points from li objects */
 ul
@@ -9,7 +15,37 @@ ul
     list-style-type: none;
 }
 
-/* Move elements on the nav var to the rigth Ex:login, register */
+
+/*----------------- Transparent design -----------------*/
+.jumbotron{
+    background: rgb(167, 196, 200); /* This is for ie8 and below */
+    background: rgba(247, 247, 255, 0.7);
+
+}
+
+.panel-heading{
+    background: rgba(247, 247, 255, 0.7)!important;
+
+}
+
+.panel{
+    background: rgba(247, 247, 255, 0.7)!important;
+
+}
+
+
+.table{
+    background: rgba(247, 247, 255, 0.7)!important;
+}
+
+.list-group-item{
+    background: rgba(247, 247, 255, 0.8)!important;
+}
+/*----------------------------------------------------*/
+
+
+
+/* Move elements on the nav var to the right Ex:login, register */
 .right-nav{
     float: right;
 }
@@ -20,6 +56,7 @@ ul
     max-height: 80%;
     margin: auto;
     padding-bottom: 20px;
+    border-radius: 5%;
 }
 
 /* Design for the cover image of a game in the exchange detail page */
@@ -71,13 +108,19 @@ ul
 }
 
 
-
-/* Adjustment to the multiple select provided by the Chosen Plugin */
-.custom-multi-select{
-    width: 600px;
-
-}
-
+.chosen-container-multi .chosen-choices
+{
+    border-radius: 5px;
+    box-shadow: inset 0px 1px 2px rgba(0,0,0,0.3);
+    border: none;
+    cursor: text;
+    margin-top: 12px;
+    padding-left: 15px;
+    border-bottom: 1px solid #ddd;
+    width: 285px;
+    text-indent: 0;
+    margin-left: 30px;
+  }
 
 /* Fix the rigth elements of the nav bar for a certain browser resolution*/
 @media (max-width: 1000px){
@@ -101,33 +144,6 @@ ul
     }
 }
 
-
-/* Hide column if device is too small */
-@media (max-width: 1000px){
-   .right-nav{
-        float: left;
-    }
-}
-
-/* Multiselect responsive */
-@media (min-width: 1200px) and (max-width: 1800px) {
-    .custom-multi-select{
-    width: 400px;
-    }
-}
-
-@media (min-width: 600px) and (max-width: 1200px) {
-    .custom-multi-select{
-    width: 250px;
-    }
-}
-
-
-@media (max-width: 600px) {
-    .custom-multi-select{
-    width: 150px;
-    }
-}
 
 /* Hide column if device is too small */
 @media (max-width: 375px){
