--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static "games/css/styles.css" %}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        {% block extra_head %}{% endblock %}
+        {% block header %}{% endblock %}
     </head>
 
     <body>
