--- a/games/templates/games/exchange.html
+++ b/games/templates/games/exchange.html
@@ -2,7 +2,7 @@
 {% block title %}Intercambios{% endblock %}
 
 {% block body %}
-    <h3 style="text-align: center">Posibles intercambios</h3>
+    <h3 style=" color:#acdfb8; text-align: center;">Posibles intercambios</h3>
 
     {% if message %}
         <div style="text-align: center" class=" col-md-6 col-md-offset-3 alert alert-warning">
@@ -36,7 +36,7 @@
                                     <input type="hidden" name="guest" value="{{ value.guest.id }}">
                                     <input type="hidden" name="creator_game" value="{{ value.creatorGame.id }}">
                                     <input type="hidden" name="guest_game" value="{{ value.guestGame.id }}">
-                                    <button class="btn btn-success" type="submit"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+                                    <button class="btn btn-success center-block" type="submit"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
                                 </form>
                             </td>
                         </tr>
