--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -3,13 +3,13 @@
 
 {% block body %}
     <div class="col-md-10  col-md-offset-1">
-        <div class="panel panel-success">
+        <div class="panel">
           <div class="panel-heading">
             <h3 class="panel-title" style="text-align: center">
                 Top 3 juegos <i class="fa fa-trophy" aria-hidden="true"></i>
             </h3>
           </div>
-          <table class="table table-striped table-hover ">
+          <table class="table table-striped  ">
               <thead>
               <tr>
                 <th>Juego</th>
