--- a/games/templates/games/trade.html
+++ b/games/templates/games/trade.html
@@ -1,7 +1,7 @@
 {% extends 'games/base.html' %}
 {% block title %}Oferta de juegos{% endblock %}
 {% load staticfiles %}
-{% block extra_head %}
+{% block header %}
     <link rel="stylesheet" href="{% static "games/css/chosen.min.css" %}">
     <script src="{% static "games/js/chosen.jquery.min.js" %}"></script>
 {% endblock %}
@@ -15,22 +15,20 @@
                 </div>
             </div>
         {% endif %}
-        <form class="form-horizontal" method="post">
-            {% csrf_token %}
-            <div class="form-group" style="text-align: center">
-                <div class="col-md-6">
-                    <h4>Juego(s) a ofrecer</h4>
+        <div class="col-md-6 col-md-offset-3">
+            <form class="form-horizontal" method="post">
+                {% csrf_token %}
+                <div class="form-group" style="text-align: center">
+                    <h4 style="color:#acdfb8;">Juego(s) a ofrecer</h4>
                     {{ owned_form }}
-                </div>
-                <div class="col-md-6">
-                    <h4>Juego(s) que quiero</h4>
+                    <h4 style="color:#acdfb8;">Juego(s) que quiero</h4>
                     {{ wanted_form }}
                 </div>
-            </div>
-            <button class="btn btn-success center-block" type="submit">
-                Intercambiar <i class="fa fa-handshake-o" aria-hidden="true"></i>
-            </button>
-        </form>
+                <button class="btn btn-success center-block" type="submit">
+                    Intercambiar <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                </button>
+            </form>
+        </div>
     </div>
 
 {% endblock %}
