--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -57,7 +57,7 @@
                     <form class="navbar-form" role="search">
                     <div class="input-group">
                         {% csrf_token %}
-                        <input id="search-input" type="text" class="form-control" >
+                        <input id="search-input" type="text" class="form-control" placeholder="Buscar juegos">
                         <span class="input-group-addon"><i class="fa fa-search"></i></span>
                     </div>
                     </form>
