--- a/games/templates/games/user_page.html
+++ b/games/templates/games/user_page.html
@@ -1,11 +1,49 @@
 {% extends 'games/base.html' %}
-{% block title %}Usuario - {{ other_user.first_name }}{% endblock %}
+{% block title %}Usuario - {{ other_user.username }}{% endblock %}
 
 {% block body %}
+    {% load staticfiles %}
+    <div class="col-md-12">
+        <div class="col-md-4">
+            <div style="text-align: center;" class="jumbotron">
+                {% if other_user.useraccount.picture == "None" %}
+                    <img class="thumbnail center-block" src="{% static 'games/img/default-user.png' %}">
+                {% else %}
+                    <img class="thumbnail center-block" src="{{ other_user.useraccount.picture }}">
+                {% endif %}
+                <h3>{{ other_user.first_name }}</h3>
 
-    <p>Hola {{ other_user.first_name }}</p>
-    <p>Gamertag: {{ other_user.useraccount.gamer_id }}</p>
+                <p><b>Gamertag:</b> {{ other_user.useraccount.gamer_id }}</p>
 
+                <form class="navbar-form" role="search">
+                    <div class="input-group">
+                        {% csrf_token %}
+                        <input id="search-input-user" type="text" class="form-control"
+                               placeholder="Buscar usuarios">
+                        <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div id="main-results-search-user"></div>
+            <div class="jumbotron">
+                <h2 style="text-align: center;color:#02194f;">Juegos de {{ other_user.username }}</h2>
+                <div class="row">
+                    {% for game in other_user.useraccount.games_owned.all %}
+                        <div class="col-md-4">
+                            <a href="{% url 'games:game_view' game.id %}"><img class="game_cover_user"
+                                                                               src="{{ game.cover }}"></a>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+{% block extra_js %}
+    <script src="{% static "games/js/user_search.js" %}"></script>
 {% endblock %}
 
 
