--- a/games/templates/games/edit_user.html
+++ b/games/templates/games/edit_user.html
@@ -1,8 +1,7 @@
 {% extends 'games/base.html' %}
-{% block title %}Registro{% endblock %}
+{% block title %}Editar usuario{% endblock %}
 
 {% block body %}
-
     <div class="col-md-8 col-md-offset-2">
         <div class="jumbotron col-md-10 col-md-offset-1">
             {%  if error_message %}
@@ -94,7 +93,9 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-success center-block" type="submit">Registrarse</button>
+                <div class="col-md-8 col-md-offset-2">
+                    <button class="btn btn-success center-block" type="submit">Guardar Cambios</button>
+                </div>
             </form>
         </div>
     </div>
