--- a/games/templates/games/edit_user.html
+++ b/games/templates/games/edit_user.html
@@ -1,5 +1,11 @@
 {% extends 'games/base.html' %}
 {% block title %}Editar usuario{% endblock %}
+{% load staticfiles %}
+
+{% block header %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
+{% endblock %}
 
 {% block body %}
     <div class="col-md-8 col-md-offset-2">
@@ -32,17 +38,27 @@
                     </div>
                     <div class="form-group" style="text-align: center">
                         <div>
-                            <span class="text-danger small">{{ form_extra.picture.errros.as_text }}</span>
+                            <span class="text-danger small">{{ form_extra.phone.errors.as_text }}</span>
                         </div>
-                        <label class="control-label">{{ form_extra.picture.label }} (Opcional)</label>
+                        <label class="control-label">{{ form_extra.phone.label }}</label>
                         <div class="input-group col-md-8 col-md-offset-2">
-                            <span class="input-group-addon"><i class="fa fa-gamepad"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-phone"></i></span>
+                            {{ form_extra.phone }}
+                        </div>
+                    </div>
+                    <div class="form-group" style="text-align: center">
+                        <div>
+                            <span class="text-danger small">{{ form_extra.picture.errors.as_text }}</span>
+                        </div>
+                        <label class="control-label">{{ form_extra.picture.label }}</label> ( Link de la imagen )
+                        <div class="input-group col-md-8 col-md-offset-2">
+                            <span class="input-group-addon"><i class="fa fa-picture-o"></i></span>
                             {{ form_extra.picture }}
                         </div>
                     </div>
                     <div class="form-group" style="text-align: center">
                         <div>
-                            <span class="text-danger small">{{ form_extra.gamer_id.errros.as_text }}</span>
+                            <span class="text-danger small">{{ form_extra.gamer_id.errors.as_text }}</span>
                         </div>
                         <label class="control-label">{{ form_extra.gamer_id.label }} (Opcional)</label>
                         <div class="input-group col-md-8 col-md-offset-2">
@@ -74,6 +90,16 @@
                     </div>
                     <div class="form-group" style="text-align: center">
                         <div>
+                            <span class="text-danger small">{{ form_extra.city.errors.as_text }}</span>
+                        </div>
+                        <label class="control-label">{{ form_extra.city.label }}</label>
+                        <div class="input-group col-md-8 col-md-offset-2">
+                            <span class="input-group-addon"><i class="fa fa-building-o"></i></span>
+                            {{ form_extra.city }}
+                        </div>
+                    </div>
+                    <div class="form-group" style="text-align: center">
+                        <div>
                             <span class="text-danger small">{{ form.password.errors.as_text }}</span>
                         </div>
                         <label class="control-label">{{ form.password.label }}</label>
@@ -101,4 +127,3 @@
     </div>
 
  {% endblock %}
-
