--- a/games/templates/games/register.html
+++ b/games/templates/games/register.html
@@ -1,5 +1,11 @@
 {% extends 'games/base.html' %}
 {% block title %}Registro{% endblock %}
+{% load staticfiles %}
+
+{% block header %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
+{% endblock %}
 
 {% block body %}
 
@@ -33,17 +39,27 @@
                     </div>
                     <div class="form-group" style="text-align: center">
                         <div>
-                            <span class="text-danger small">{{ form_extra.picture.errros.as_text }}</span>
+                            <span class="text-danger small">{{ form_extra.phone.errors.as_text }}</span>
                         </div>
-                        <label class="control-label">{{ form_extra.picture.label }} (Opcional)</label>
+                        <label class="control-label">{{ form_extra.phone.label }}</label>
                         <div class="input-group col-md-8 col-md-offset-2">
-                            <span class="input-group-addon"><i class="fa fa-gamepad"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-phone"></i></span>
+                            {{ form_extra.phone }}
+                        </div>
+                    </div>
+                    <div class="form-group" style="text-align: center">
+                        <div>
+                            <span class="text-danger small">{{ form_extra.picture.errors.as_text }}</span>
+                        </div>
+                        <label class="control-label">{{ form_extra.picture.label }}</label> ( Link de la imagen )
+                        <div class="input-group col-md-8 col-md-offset-2">
+                            <span class="input-group-addon"><i class="fa fa-picture-o"></i></span>
                             {{ form_extra.picture }}
                         </div>
                     </div>
                     <div class="form-group" style="text-align: center">
                         <div>
-                            <span class="text-danger small">{{ form_extra.gamer_id.errros.as_text }}</span>
+                            <span class="text-danger small">{{ form_extra.gamer_id.errors.as_text }}</span>
                         </div>
                         <label class="control-label">{{ form_extra.gamer_id.label }} (Opcional)</label>
                         <div class="input-group col-md-8 col-md-offset-2">
@@ -75,6 +91,16 @@
                     </div>
                     <div class="form-group" style="text-align: center">
                         <div>
+                            <span class="text-danger small">{{ form_extra.city.errors.as_text }}</span>
+                        </div>
+                        <label class="control-label">{{ form_extra.city.label }}</label>
+                        <div class="input-group col-md-8 col-md-offset-2">
+                            <span class="input-group-addon"><i class="fa fa-building-o"></i></span>
+                            {{ form_extra.city }}
+                        </div>
+                    </div>
+                    <div class="form-group" style="text-align: center">
+                        <div>
                             <span class="text-danger small">{{ form.password.errors.as_text }}</span>
                         </div>
                         <label class="control-label">{{ form.password.label }}</label>
@@ -94,10 +120,11 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-success center-block" type="submit">Registrarse</button>
+                <div class="col-md-8 col-md-offset-2">
+                    <button class="btn btn-success center-block" type="submit">Registrarse</button>
+                </div>
             </form>
         </div>
     </div>
 
  {% endblock %}
-
