Better exchange tool

--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -93,7 +93,7 @@
 
     </body>
     <footer>
-        <script type="text/javascript" src="{% static "games/js/script.js" %}"></script>
+        <script type="text/javascript" src="{% static "games/js/game_search.js" %}"></script>
         {% block extra_js %}{% endblock %}
     </footer>
 
