--- a/games/templates/games/me.html
+++ b/games/templates/games/me.html
@@ -174,7 +174,7 @@
     {% endif %}
 
 {% endblock %}
-{% block extra_js %}
+{% block footer %}
     <script src="{% static "games/js/user_search.js" %}"></script>
 {% endblock %}
 
