--- a/games/templates/games/register.html
+++ b/games/templates/games/register.html
@@ -2,7 +2,7 @@
 {% block title %}Registro{% endblock %}
 {% load staticfiles %}
 
-{% block header %}
+{% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
 {% endblock %}
