Contact form and automatic emails

--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -119,7 +119,7 @@
                         ·
                         <a href="#">Acerca</a>
                         ·
-                        <a href="#">Contacto</a>
+                        <a href="{% url 'games:contact' %}">Contacto</a>
                     </p>
 
                     <p>Game Ranks &copy; 2017</p>
